fix: preview block overflow

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -147,9 +147,10 @@ body {
 }
 
 .preview {
-  color: #111111;
-  padding: 10px;
   box-sizing: border-box;
+  overflow-wrap: break-word;
+  padding: 10px;
+  color: #111111;
 }
 
 .hidden {
